--- a/7-World_History/Who am I?/Who am I?.tex
+++ b/7-World_History/Who am I?/Who am I?.tex
@@ -43,20 +43,21 @@ large house next to the {\color{blue}
 \underline{\href{https://www.taoscountryclub.com/}{Taos Country Club}}} with
 him. My dad's name is Ernie Mondragon and my mom's name is Lucy Robertson.
 
-I bear crawled before I crawled normally and, according to my father, ran before
-I walked.  In the courtroom where my parents allowed their lawyers to fight for
-the right of raising me, it was the first time I'd been able to see my father in
-months; %more precise?% I heard his voice and ran down the courtroom walkway to
-him as soon as I was out of my mother's hold, I was three years old. %fact check
-this> The reason for this custody battle boils down to the fact that my mother
-``kidnapped'' me in the attempt to extricate me from the ``abusive'' hands of my
-father (the exact details of this don't have the need to be related here, but
-know that all is fine with my situation now).  My mother obtained possession of
-me without the legal authority to do so a handful of times, the exact
-chronological order of these events is vague at best and the only way to decide
-of it exactly would be to scrounge through court transcripts and other
-documents, an endeavor that I don't want to partake in as I have exerted enough
-mental energy throughout my lifetime being concerned with my early childhood.
+I bear crawled before I crawled normally and, according to my father, ran
+before I walked.  In the courtroom where my parents allowed their lawyers to
+fight for the right of raising me, it was the first time I'd been able to see
+my father in months; %more precise?% I heard his voice and ran down the
+courtroom walkway to him as soon as I was out of my mother's hold, I was three
+years old. %fact check this> The reason for this custody battle boils down to
+the fact that my mother ``kidnapped'' me in the attempt to extricate me from
+the ``abusive'' hands of my father (the exact details of this don't have the
+need to be related here, but know that all is fine with my situation now).  My
+mother obtained possession of me without the legal authority to do so a handful
+of times, the exact chronological order of these events is vague at best and
+the only way to decide of it exactly would be to scrounge through court
+transcripts and other documents, an endeavor that I don't want to partake in as
+I have exerted enough mental energy throughout my lifetime being concerned with
+my early childhood.
 
 The initial arrangement of my custody situation was one that most kids in a
 situation similar to mine have had, shared custody; my father would have me for
@@ -68,105 +69,105 @@ don't remember going to school, it must have been before I was enrolled in
 anything beyond a daycare, again my memories overlap quite a bit
 chronologically.  Come to think of it my mother and father have never married.
 
-A woman named Dawn (I believe ``Dawn'' is short for ``Dawna,'' I know, quite the
-truncation) at one point was my mother's landlord.  Dawn had a treehouse in the
-backyard on an old tree, I believe it's a Chinese elm, the treehouse was removed
-the last time I saw the property, but I didn't get the best view so I may have
-just not seen it.  One time inside of the treehouse, on my own, there was a
-wasp, and I guess the wasp sensed my fear of it because it stung me square on
-the nose, it was the first time I remember being stung; I descended the latter
-with a blister on the tip of my nose to my mother and Dawn, when I entered the
-threshold of the door with tears dripping down my face my mother and Dawn got
-honey and put it on my nose.  For some reason I associate this memory with
-bears; I believe I asked about why bears like honey or something, this
-association likely came from
+A woman named Dawn (I believe ``Dawn'' is short for ``Dawna,'' I know, quite
+the truncation) at one point was my mother's landlord.  Dawn had a treehouse in
+the backyard on an old tree, I believe it's a Chinese elm, the treehouse was
+removed the last time I saw the property, but I didn't get the best view so I
+may have just not seen it.  One time inside of the treehouse, on my own, there
+was a wasp, and I guess the wasp sensed my fear of it because it stung me
+square on the nose, it was the first time I remember being stung; I descended
+the latter with a blister on the tip of my nose to my mother and Dawn, when I
+entered the threshold of the door with tears dripping down my face my mother
+and Dawn got honey and put it on my nose.  For some reason I associate this
+memory with bears; I believe I asked about why bears like honey or something,
+this association likely came from
 {\color{blue}\underline{\href{https://winniethepooh.disney.com/}{Winnie The
-Pooh}}}.  The apartment my mom lived in was on the second floor of Dawn's house,
-a rather small one, and I remember bringing toys of Batman and Shrek to this
-apartment to and from my dad's house, this made the established boundary between
-life with my father and life with my mother less defined.
+Pooh}}}.  The apartment my mom lived in was on the second floor of Dawn's
+house, a rather small one, and I remember bringing toys of Batman and Shrek to
+this apartment to and from my dad's house, this made the established boundary
+between life with my father and life with my mother less defined.
 
 Dawn had children, I believe two, and they had guinea pigs, likely around two.
 When no one was watching, as I was allowed to play or pet them, I would throw
 the guinea pigs into the air as far up as I could and catch them on the way
 down, they made a squealing noise that I found humorous; but my mom caught me
 doing this one time and told me I could end up hurting them.  Eventually I got
-my own guinea pig, far later in my life as my mother was no longer living in the
-country, and still not seeing how I could hurt it I threw it up into the air the
-same way as the guinea pigs belonging to Dawn's kids.  I don't remember if at
-one time I didn't catch it, it had a heart attack or it simply stopped
-breathing, but it died because of what I was doing, I placed the poor thing into
-it's cage and pretended to sleep; I still hold back tears a little bit as I
-remember my dad looking into the cage to try and play with it (I don't remember
-its gender or its name) and noticing that it wasn't breathing.
+my own guinea pig, far later in my life as my mother was no longer living in
+the country, and still not seeing how I could hurt it I threw it up into the
+air the same way as the guinea pigs belonging to Dawn's kids.  I don't remember
+if at one time I didn't catch it, it had a heart attack or it simply stopped
+breathing, but it died because of what I was doing, I placed the poor thing
+into it's cage and pretended to sleep; I still hold back tears a little bit as
+I remember my dad looking into the cage to try and play with it (I don't
+remember its gender or its name) and noticing that it wasn't breathing.
 
 My first shot with a gun was a bullseye (which happened sometime before or
 around the age of seven), my dad got an empty soup can with a quality badge
 printed on the front of it, and told me ``This is the bullseye, aim here.'' It
-took me about ten seconds to line up the shot and after I fired we went up close
-to inspect it; my dad had been surprised that I even hit it in the first place
-as he couldn't because of the distance we were shooting from.  To some respect,
-this event is proof that I'm a natural shooter, but if I am I haven't honed that
-talent quite yet as I've seldom shot a gun after that.  The reason I mention
-this isn't just to toot my own horn, though there is cadence to that objective,
-but to demonstrate the derivation machinery of a lot of my early childhood was
-influenced by, I truly believed I was above others, the teachers who taught me,
-my friends who played with me, my family who guided me. The reason I believed
-this is because of the special attention I would receive and the notion I sensed
-to be present in the people around me, from as early as I can remember being
-able to conversate, that I had a sort of special ability, perhaps a particular
-aptness for understanding my environment. Now I realize that everyone around me
-has tried to present my ``potential,'' as they say to me; I believe that same
-potential exists in everybody, and perhaps I could do something to help them
-realize it.
+took me about ten seconds to line up the shot and after I fired we went up
+close to inspect it; my dad had been surprised that I even hit it in the first
+place as he couldn't because of the distance we were shooting from.  To some
+respect, this event is proof that I'm a natural shooter, but if I am I haven't
+honed that talent quite yet as I've seldom shot a gun after that.  The reason I
+mention this isn't just to toot my own horn, though there is cadence to that
+objective, but to demonstrate the derivation machinery of a lot of my early
+childhood was influenced by, I truly believed I was above others, the teachers
+who taught me, my friends who played with me, my family who guided me. The
+reason I believed this is because of the special attention I would receive and
+the notion I sensed to be present in the people around me, from as early as I
+can remember being able to conversate, that I had a sort of special ability,
+perhaps a particular aptness for understanding my environment. Now I realize
+that everyone around me has tried to present my ``potential,'' as they say to
+me; I believe that same potential exists in everybody, and perhaps I could do
+something to help them realize it.
 
-One of my memories with my mother is my in the backseat of her car, I was around
-eight years old at the time and she wouldn't allow me to sit in the front seat,
-she had just finished telling me that warm water is better for you than cold
-water, but that drinking warm water from a plastic bottle isn't as particles
-from the bottle end up in the water and therefore into your body, when she
-withdrew from a freshly acquired {\color{blue}\underline{\href
+One of my memories with my mother is my in the backseat of her car, I was
+around eight years old at the time and she wouldn't allow me to sit in the
+front seat, she had just finished telling me that warm water is better for you
+than cold water, but that drinking warm water from a plastic bottle isn't as
+particles from the bottle end up in the water and therefore into your body,
+when she withdrew from a freshly acquired {\color{blue}\underline{\href
 {https://www.cidsfoodmarket.com/}{Cid's Food Market}}} shopping bag a container
 of peculiar green meat cubes, beef, and she offered it to me. I loved the stuff
 enough and in my inquisitive nature I asked her why it was green, I don't
 remember what reason she gave for the color but she mentioned that it came from
 a cow. This wasn't the first I'd heard about the farming of animals and I had
 long since accepted the fact that other things would die so that I would live,
-but for some reason, perhaps it was the color of the meat, or its flavor, or the
-name and logo of the brand that sold it that got me in this specific instance it
-hit me in a particular way and I started to cry; it seemed such a cruel
-injustice that it would be so flavorful and yet in such vain that a cow was
-killed in order to be sliced up into cubes and placed into a container for me to
-eat. I'm not a vegetarian, but in that moment I was considering it.
+but for some reason, perhaps it was the color of the meat, or its flavor, or
+the name and logo of the brand that sold it that got me in this specific
+instance it hit me in a particular way and I started to cry; it seemed such a
+cruel injustice that it would be so flavorful and yet in such vain that a cow
+was killed in order to be sliced up into cubes and placed into a container for
+me to eat. I'm not a vegetarian, but in that moment I was considering it.
 
 After a certain point my father had full custody over me (perhaps he had full
 custody over me ever since the initial court settlement, I don't actually
 remember) but he allowed time for me to be with my mom, he recognized, and
-continues to, the role a mother plays in one's life. There was a man named Eliot
-that me and my mom would frequent, the best way I could describe him would be as
-real life Mr.\ Miyagi, he's an elderly man who maintains great physical fitness
-in his old age through daily physical exercise, using proven techniques, and
-practicing meditation. My mom would come to him for guidance and bring me with;
-I'll still visit him every so often for the same purpose. The reason I mention
-Eliot is that she was the only friend of my mom's that I was directly aware of,
-as in not simply in passing, and she requested of my father that I and her spend
-a few days at a friend's house of whom I was unfamiliar, I believe the exact
-number of days was two. This is not where we ended up going. I don't know
-exactly what occurred, and I have not the delegation to inquire, but we arrived
-to some destination, it was dark and all I could see were a few cars parked
-outside a dimly lit porch, and I stayed in the car longer than would have made
-sense given an overnight visit at a friend's house; I fell asleep and when I
-woke up we were driving through an unfamiliar road surrounded by sagebrush.
-``Where are we going?'' I asked, no response. The next thing I remember is
-daytime, I woke up in the backseat and at some point my mom asked me if I wanted
-to see an owl, I believe she gave it a name and asked used the name instead of
-the word ``owl''; we got out and she opened the truck, underneath a pile of
-sheets and blankets there was an injured owl, my mom must have found it injured
-or injured it herself.
+continues to, the role a mother plays in one's life. There was a man named
+Eliot that me and my mom would frequent, the best way I could describe him
+would be as real life Mr.\ Miyagi, he's an elderly man who maintains great
+physical fitness in his old age through daily physical exercise, using proven
+techniques, and practicing meditation. My mom would come to him for guidance
+and bring me with; I'll still visit him every so often for the same purpose.
+The reason I mention Eliot is that she was the only friend of my mom's that I
+was directly aware of, as in not simply in passing, and she requested of my
+father that I and her spend a few days at a friend's house of whom I was
+unfamiliar, I believe the exact number of days was two. This is not where we
+ended up going. I don't know exactly what occurred, and I have not the
+delegation to inquire, but we arrived to some destination, it was dark and all
+I could see were a few cars parked outside a dimly lit porch, and I stayed in
+the car longer than would have made sense given an overnight visit at a
+friend's house; I fell asleep and when I woke up we were driving through an
+unfamiliar road surrounded by sagebrush.  ``Where are we going?'' I asked, no
+response. The next thing I remember is daytime, I woke up in the backseat and
+at some point my mom asked me if I wanted to see an owl, I believe she gave it
+a name and asked used the name instead of the word ``owl''; we got out and she
+opened the truck, underneath a pile of sheets and blankets there was an injured
+owl, my mom must have found it injured or injured it herself.
 
 ``Why do you have it in the trunk, mom?'' I said; keep in mind I don't remember
-exactly the words used, or even if they're spoken at all; this is purely from my
-memory.
+exactly the words used, or even if they're spoken at all; this is purely from
+my memory.
 
 ``Because owls don't like the dark better than the day.'' She must have used an
 example to compare the owl to, as that is her nature.
@@ -176,11 +177,11 @@ a small dirt road surrounded by sagebrush, a familiar scene, with an
 accompanying forest to our left; to our right was a magnificent black mountain
 that looked like a mountain I had seen out of
 {\color{blue}\underline{\href{https://www.history.com/shows/ancient-aliens}
-{Ancient Aliens}}}, my father is a fan of the show, where there was some sort of
-snake being with carvings on the walls and it would kill you if you got too
+{Ancient Aliens}}}, my father is a fan of the show, where there was some sort
+of snake being with carvings on the walls and it would kill you if you got too
 close; I don't remember the exact details. We turned left off of the dirt road
-that led us to the area, my mom had the plan of going for a walk in the woods, I
-didn't want to and expressed it, we hopped over the fence that separated the
+that led us to the area, my mom had the plan of going for a walk in the woods,
+I didn't want to and expressed it, we hopped over the fence that separated the
 sagebrush from the forest once again and got back into my moms car. At this
 point we were facing the opposite direction of the one that led us there and
 there was a little building or something along the border fence with it's area
