History Who Am I? project progress

--- a/7-World_History/Who am I?/Who am I?.tex
+++ b/7-World_History/Who am I?/Who am I?.tex
@@ -172,20 +172,41 @@ my memory.
 ``Because owls don't like the dark better than the day.'' She must have used an
 example to compare the owl to, as that is her nature.
 
-After a while on the road, and a few more sleep sessions for me, we ended up on
-a small dirt road surrounded by sagebrush, a familiar scene, with an
+After a long time of travel, and a few more sleep sessions for me, we ended up
+on a small dirt road surrounded by sagebrush, a familiar scene, with an
 accompanying forest to our left; to our right was a magnificent black mountain
 that looked like a mountain I had seen out of
 {\color{blue}\underline{\href{https://www.history.com/shows/ancient-aliens}
 {Ancient Aliens}}}, my father is a fan of the show, where there was some sort
 of snake being with carvings on the walls and it would kill you if you got too
 close; I don't remember the exact details. We turned left off of the dirt road
-that led us to the area, my mom had the plan of going for a walk in the woods,
-I didn't want to and expressed it, we hopped over the fence that separated the
-sagebrush from the forest once again and got back into my moms car. At this
-point we were facing the opposite direction of the one that led us there and
-there was a little building or something along the border fence with it's area
-squared off with a gate, the stereotypical farm gate that everyone is familiar
-with; the gate was facing us and it was going to be a bit of a project to get
-out the way we came without driving 
+that led us to the area, my mom had the plan of going for a walk in the woods
+and so we hopped the fence that separated the sagebrush from the forest, I
+didn't want to and I expressed it, we hopped over the fence once again and went
+back into my moms car. At this point we were facing the opposite direction of
+the one that led us there and there was a little building or something along
+the border fence with it's area squared off with a gate, the stereotypical farm
+gate that everyone is familiar with; it was facing us and it was going to be a
+bit of a project to get out the way we came without driving over the sagebrush.
+As my mom was beginning to go through the struggle of backing out I told her of
+the mountain I'd seen in Ancient Aliens, apparently it freaked her out because
+she just rammed through the gate and drove out that way; the building was
+accompanied by two of these gates but the second one was open, the one that led
+the rest of the way to the dirt road. While I was associating the nearby
+mountain with the one I saw on Ancient Aliens, I genuinely had the plan of
+telling her; I don't remember if it was to get her to leave the area or because
+I was scared of it, but it accomplished the prior. Along with getting my mom to
+leave the area, my elaboration on the mountain also lead her car to have a
+broken windshield, a hole that went straight through the driver's side of the
+windshield. She tried to cover it up with a piece of cardboard from the trunk
+but it was no use, we drove around with a loud clapping noise every now and
+then and negative cabin pressure.
+
+Eventually my mom got pulled over, my mother answered the cops questions with a
+fear in her voice, he questioned the hole in the windshield and the damage to
+the front end, I don't remember what her answer was but it's evident that it
+wasn't convincing because soon I found myself in the passenger seat of a cop
+car on my way to an orphanage. Before I was placed (rather, I likely willingly
+entered the whole time I was with my mom, I wanted to go back home) 
+
 \end{document}
