Fixed dumb comment mistakes on Who Am I? project

--- a/7-World_History/Who am I?/Who am I?.tex
+++ b/7-World_History/Who am I?/Who am I?.tex
@@ -46,9 +46,9 @@ him. My dad's name is Ernie Mondragon and my mom's name is Lucy Robertson.
 I bear crawled before I crawled normally and, according to my father, ran
 before I walked.  In the courtroom where my parents allowed their lawyers to
 fight for the right of raising me, it was the first time I'd been able to see
-my father in months; %more precise?% I heard his voice and ran down the
+my father in months; <more precise?> I heard his voice and ran down the
 courtroom walkway to him as soon as I was out of my mother's hold, I was three
-years old. %fact check this> The reason for this custody battle boils down to
+years old. <fact check this> The reason for this custody battle boils down to
 the fact that my mother ``kidnapped'' me in the attempt to extricate me from
 the ``abusive'' hands of my father (the exact details of this don't have the
 need to be related here, but know that all is fine with my situation now).  My
