History work Who Am I?

--- a/7-World_History/Who am I?/Who am I?.tex
+++ b/7-World_History/Who am I?/Who am I?.tex
@@ -202,11 +202,33 @@ windshield. She tried to cover it up with a piece of cardboard from the trunk
 but it was no use, we drove around with a loud clapping noise every now and
 then and negative cabin pressure.
 
-Eventually my mom got pulled over, my mother answered the cops questions with a
+Eventually my mom got pulled over, my mother answered the cops' questions with a
 fear in her voice, he questioned the hole in the windshield and the damage to
 the front end, I don't remember what her answer was but it's evident that it
-wasn't convincing because soon I found myself in the passenger seat of a cop
-car on my way to an orphanage. Before I was placed (rather, I likely willingly
-entered the whole time I was with my mom, I wanted to go back home) 
+wasn't convincing because I soon found myself in the passenger seat of a cop car
+on my way to an orphanage. The cop got wildlife services to obtain the owl. On
+the way to the orphanage we drove passed a frozen over lake, opposing lanes
+branded around it; there was a car that had falling into the lake, it was upside
+down with another car, it must have been a pretty extreme accident. The cop
+found a way to drive onto the ice, winter must be so severe there that one can
+feel comfortable driving on a frozen lake (I believe we were in Idaho, but again
+I don't feel the need to ask my parents for exact details), he stayed on scene
+helping as much as he could until other cops arrived, he had radioed in that he
+had a kid with him that had to get to the orphanage. I don't remember saying
+anything to the cop, but I was smart enough that I must have given him
+information about my father, we must have talked about the owl and life in
+general, as I have vague images that relate to those concepts.
+
+The orphanage was depressing, I was already familiar with what life was like at
+one of them; the caretakers believed that I was to stay there until adulthood
+and thus I believed the same. Part of the coping process I went through involved
+visiting everyone's room; one person, an older boy probably around fifteen years
+old, had a TV that was tuned to a channel playing
+{\color{blue}\underline{\href{https://www.britannica.com/topic/Tom-and-Jerry}{Tom
+and Jerry}}}, one of my all-time favorite shows, this helped me to accept my
+fate. I arrived at the orphanage a few hours before nightfall; around the time
+eventide came I was told that my dad was coming to get me. He arrived near
+midnight on my sisters car, a hybrid Toyota Corolla that I don't know the year
+of
 
 \end{document}
