Completed Who Am I? draft 1

--- a/7-World_History/Who am I?/Who am I?.tex
+++ b/7-World_History/Who am I?/Who am I?.tex
@@ -9,6 +9,7 @@
 \setlength\paperheight{11in}
 \setlength\parindent{24pt}
 
+\renewcommand\thesubsection{\arabic{subsection}}
 \hypersetup
 {
     colorlinks=true,
@@ -229,6 +230,18 @@ and Jerry}}}, one of my all-time favorite shows, this helped me to accept my
 fate. I arrived at the orphanage a few hours before nightfall; around the time
 eventide came I was told that my dad was coming to get me. He arrived near
 midnight on my sisters car, a hybrid Toyota Corolla that I don't know the year
-of
+of, with my brother in law James Mondragon and two others. We drove home in the
+dark and I got the best sleep I had gotten since I left my home.
+
+After that incident my mom ended up in a mental hospital for a while. I remember
+calling her and talking about words and language, discussing happenings in
+school, and asking her for advice; she was, and still is, in a healthy state of
+mind. My mom has a deep understanding of physics phenomena and spiritual and
+physical wellbeing. Truly I'm not fully aware of the situation surrounding me,
+my intuition gives me a dull concept of my family, but I still find a way to
+love them, everything has led up to this point and I'm ready to move forward
+with the biggest punch I can muster.
+
+\subsection*{Hola}
 
 \end{document}
