Completed Soble Culture semana 6

--- a/8-Spanish_II/sobre_cultura_semana_6/sobre_cultura_semana_6.tex
+++ b/8-Spanish_II/sobre_cultura_semana_6/sobre_cultura_semana_6.tex
@@ -46,6 +46,7 @@ Aquí es una mapa de Belice:\\
     \includegraphics[width=4.25in,height=5.5in]{foto_de_Belice.jpg}
 \end{center}
 
+
 La capital de Belice es Belmopán
 
 Otras ciudades importantes son San Pedro, Bella Vista, San Narciso y San José.
@@ -60,19 +61,21 @@ El presidente o presidenta de Belice es Dean Barrow.
 
 Las comidas típicas de Belice son Sopa de pollo, Bundiga, Sopa Hadut y Tamales.
 
-La música de......... es. 
+La música de Belice es reggae. 
 
-Personajes importantes de .......... son..  Son conocidos por.......
+Personajes importantes de Belice son Dean Barrow, Manuel Esquivel, Ian Gaynair
+y Elmira Minita Gordon. Son conocidos por, in ese orden; siendo el presidente de
+Belice; es músico; es un jugador de fútbol; es política, es profesor.
 
-Algo importante sobre........ es......
+Algo importante sobre Belice es esta ubicación; América Central.
 
-Include photos (fotos) otro cognado o dibujos.  
-
+\begin{center}
+    \includegraphics[scale=0.5]{Dean_Barrow.jpg}\\
+    \paragraph~
+    \vspace{-4ex}
+    {\small(Dean Barrow, downloaded from
+    \url{https://en.wikipedia.org/wiki/Dean_Barrow})}
+\end{center}
  
-
-You may submit this work online or on paper. 
-
-If you submit it on paper, make sure to type here " Lo hice en papel"
-
 \end{document}
 
